[gd_scene load_steps=21 format=3 uid="uid://bfb3pnfhgotbr"]

[ext_resource type="Script" uid="uid://de7qo7u3prg0l" path="res://UI/ui.gd" id="1_0mc3e"]
[ext_resource type="Theme" uid="uid://be23ll5v6piho" path="res://UI/Resources/UITheme.tres" id="1_3b2b5"]
[ext_resource type="Texture2D" uid="uid://djaom6sr8stwp" path="res://UI/Assets/Coin.png" id="2_qui0h"]
[ext_resource type="Texture2D" uid="uid://2o13wdjh6k2" path="res://UI/Assets/Iron.png" id="3_vrfts"]
[ext_resource type="PackedScene" uid="uid://crcmk6dce3ec8" path="res://UI/BadNorthUI.tscn" id="5_2n5f6"]
[ext_resource type="PackedScene" uid="uid://cou5pj7414kia" path="res://UI/Shop.tscn" id="6_27c8x"]
[ext_resource type="PackedScene" uid="uid://bimvic72dutxy" path="res://UI/MainMenu.tscn" id="7_2n5f6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wusub"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6l6n"]
bg_color = Color(0.862745, 0.780392, 0.709804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n5f6"]
bg_color = Color(0.67, 0.2546, 0.261523, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27c8x"]
bg_color = Color(0.933815, 0.587192, 0.574303, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i1vam"]
bg_color = Color(0.417338, 0.780352, 0.943813, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q77pa"]
bg_color = Color(0.0150534, 0.0158067, 0.152337, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8582"]
bg_color = Color(0.415686, 0.780392, 0.945098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6dx3"]
bg_color = Color(0.0156863, 0.0156863, 0.152941, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2n5f6"]

[sub_resource type="Animation" id="Animation_jqn02"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Day2:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Day:size_flags_stretch_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Night:size_flags_stretch_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Night2:size_flags_stretch_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_foiwe"]
resource_name = "day_night_cycle"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Day:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Night:size_flags_stretch_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.0, 4.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Day2:size_flags_stretch_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Night2:size_flags_stretch_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3ujc7"]
resource_name = "night_to_day"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Night:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Night2:size_flags_stretch_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 4.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Day2:size_flags_stretch_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0, 6.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5xurb"]
_data = {
&"RESET": SubResource("Animation_jqn02"),
&"day_to_night": SubResource("Animation_foiwe"),
&"night_to_day": SubResource("Animation_3ujc7")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0mc3e")

[node name="UI" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wusub")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TopBar" type="Panel" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_g6l6n")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="Button" parent="UI/VBoxContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("1_3b2b5")
theme_override_colors/font_color = Color(0, 0, 0, 1)
action_mode = 0
text = "Menu"

[node name="MarginContainer" type="MarginContainer" parent="UI/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Panel" type="PanelContainer" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HealthBar" type="Panel" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2n5f6")

[node name="MaxHealthBar" type="Panel" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_27c8x")

[node name="Label2" type="Label" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 0
text = "Village"

[node name="HealthLabel" type="Label" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 8
text = "100/100"
horizontal_alignment = 2

[node name="Button" type="Button" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 4
text = "1 Damage"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Day" type="Panel" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i1vam")

[node name="Night" type="Panel" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q77pa")

[node name="Day2" type="Panel" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n8582")

[node name="Night2" type="Panel" parent="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_c6dx3")

[node name="CenterContainer" type="CenterContainer" parent="UI/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="UI/VBoxContainer/TopBar/HBoxContainer/CenterContainer"]
clip_contents = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("1_3b2b5")
theme_override_constants/icon_margin = 15
theme_override_constants/h_separation = 15
item_count = 2
max_columns = 2
fixed_icon_size = Vector2i(40, 40)
item_0/text = "1"
item_0/icon = ExtResource("2_qui0h")
item_0/selectable = false
item_1/text = "1"
item_1/icon = ExtResource("3_vrfts")
item_1/selectable = false

[node name="BadNorth" parent="UI/VBoxContainer" instance=ExtResource("5_2n5f6")]
visible = false
layout_mode = 2

[node name="Shop" parent="UI/VBoxContainer" instance=ExtResource("6_27c8x")]
visible = false
layout_mode = 2

[node name="DomeKeeper" type="Panel" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_2n5f6")

[node name="MainMenu" parent="UI" instance=ExtResource("7_2n5f6")]
visible = false
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5xurb")
}
speed_scale = 4.0

[connection signal="pressed" from="UI/VBoxContainer/TopBar/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/TopBar/HBoxContainer/MarginContainer/VBoxContainer/Panel/Button" to="." method="_on_button_pressed" binds= [1]]
[connection signal="ready_pressed" from="UI/VBoxContainer/Shop" to="." method="_on_shop_ready_pressed"]
[connection signal="unit_created" from="UI/VBoxContainer/Shop" to="UI/VBoxContainer/BadNorth" method="_on_shop_unit_created"]
[connection signal="unit_updated" from="UI/VBoxContainer/Shop" to="UI/VBoxContainer/BadNorth" method="_on_shop_unit_updated"]
[connection signal="continue_pressed" from="UI/MainMenu" to="." method="_on_main_menu_continue_pressed"]
[connection signal="new_game_pressed" from="UI/MainMenu" to="." method="_on_main_menu_new_game_pressed"]
[connection signal="quit_pressed" from="UI/MainMenu" to="." method="_on_main_menu_quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
